tests/golden/type_errors/function_unknown_parameter_type.cd
fun bad(x: nope) {
  print x;
}
